%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: skeleton-FirstWalk_0
  serializedVersion: 2
  m_AnimatorParameters:
  - m_Name: PhotoInTarget
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: RobbeToPhoto
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: RobbeBendToPhoto
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 3
    m_Name: Base Layer
    m_StateMachine: {fileID: 110700000}
    m_Mask: {fileID: 0}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!206 &20600000
BlendTree:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Blend Tree
  m_Childs: []
  m_BlendParameter: Blend
  m_BlendParameterY: Blend
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_BlendType: 0
--- !u!206 &20605212
BlendTree:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Blend Tree
  m_Childs: []
  m_BlendParameter: Blend
  m_BlendParameterY: Blend
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_BlendType: 0
--- !u!206 &20645061
BlendTree:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Blend Tree
  m_Childs: []
  m_BlendParameter: Blend
  m_BlendParameterY: Blend
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 1
  m_BlendType: 0
--- !u!1101 &110100000
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110294383}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110142417
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110294383}
  m_DstState: {fileID: 110205212}
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: PhotoInTarget
    m_EventTreshold: 0
    m_ExitTime: 1
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110145251
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110227558}
  m_DstState: {fileID: 110208481}
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: PhotoInTarget
    m_EventTreshold: 0
    m_ExitTime: 1
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110166015
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110227558}
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: RobbeBendToPhoto
    m_EventTreshold: 0
    m_ExitTime: 1
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110198321
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110205212}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: 0
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: RobbeToPhoto
    m_EventTreshold: 0
    m_ExitTime: 1
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1102 &110200000
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Robbe_Bend
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 561fac4c7ee756a4c9d580ac9d190a53, type: 2}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 48, y: 108, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110205212
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Robbe_RunRight
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 20fefe0fb86bf84489913c28e94f571a, type: 2}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 48, y: 48, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110208481
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Robbe_RunRight 0
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 20fefe0fb86bf84489913c28e94f571a, type: 2}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 48, y: 228, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110227558
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Robbe_Idle 0
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: cbf6fbd54260bcf46aa654969d7e6059, type: 2}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 48, y: 168, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110294383
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Robbe_Idle
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: cbf6fbd54260bcf46aa654969d7e6059, type: 2}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 48, y: -12, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1107 &110700000
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Base Layer
  m_DefaultState: {fileID: 110294383}
  m_States:
  - {fileID: 110200000}
  - {fileID: 110294383}
  - {fileID: 110205212}
  - {fileID: 110227558}
  - {fileID: 110208481}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
    data:
      first: {fileID: 0}
      second: []
    data:
      first: {fileID: 110294383}
      second:
      - {fileID: 110142417}
    data:
      first: {fileID: 110200000}
      second:
      - {fileID: 110166015}
    data:
      first: {fileID: 110205212}
      second:
      - {fileID: 110198321}
    data:
      first: {fileID: 110227558}
      second:
      - {fileID: 110145251}
  m_MotionSetCount: 1
  m_AnyStatePosition: {x: 72, y: -60, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
